# Taller3

./: CMakeLists.txt  Estudiante.cpp  Estudiante.h  Instructor.cpp  Instructor.h  NodoABB_Instructores.cpp  NodoABB_Instructores.h  NodoAVL_Estudiantes.cpp  NodoAVL_Estudiantes.h  Sistema.cpp  Sistema.h  estudiantes.csv  instructores.csv  main.cpp
